# cg_contest-grader

./: CHANGELOG.md  Makefile  README.md  __init__.py  setup.py
cg_learning/: README.md  models.py  tracker.py
compiler/: README.md  make.sh  manage.py  output.txt  test.json
compiler/test/4-opt-phase1/submits/ta/: CMakeLists.txt
compiler/test/4-opt-phase1/submits/ta/include/cminusfc/: cminusf_builder.hpp
compiler/test/4-opt-phase1/submits/ta/include/codegen/: ASMInstruction.hpp  CodeGen.hpp  Register.hpp
compiler/test/4-opt-phase1/submits/ta/include/common/: ast.hpp  util.hpp
compiler/test/4-opt-phase1/submits/ta/include/lightir/: BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  IRprinter.hpp  Instruction.hpp  Module.hpp  Names.hpp  Type.hpp  User.hpp  Value.hpp
compiler/test/4-opt-phase1/submits/ta/include/passes/: DeadCode.hpp  Dominators.hpp  FuncInfo.hpp  LICM.hpp  LoopDetection.hpp  Mem2Reg.hpp  PassManager.hpp
compiler/test/4-opt-phase1/submits/ta/src/cminusfc/: cminusf_builder.cpp  main.cpp
compiler/test/4-opt-phase1/submits/ta/src/codegen/: CodeGen.cpp  Register.cpp
compiler/test/4-opt-phase1/submits/ta/src/common/: CMakeLists.txt  ast.cpp  util.cpp
compiler/test/4-opt-phase1/submits/ta/src/io/: io.c  io.h
compiler/test/4-opt-phase1/submits/ta/src/lightir/: BasicBlock.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Names.cpp  Type.cpp  User.cpp  Value.cpp
compiler/test/4-opt-phase1/submits/ta/src/parser/: lexical_analyzer.l  syntax_analyzer.y
compiler/test/4-opt-phase1/submits/ta/src/passes/: CMakeLists.txt  DeadCode.cpp  Dominators.cpp  FuncInfo.cpp  LICM.cpp  LoopDetection.cpp  Mem2Reg.cpp  PassManager.cpp
compiler/test/4-opt-phase1/submits/ta/tests/: CMakeLists.txt
compiler/test/4-opt-phase1/submits/ta/tests/1-parser/: .gitignore
compiler/test/4-opt-phase1/submits/ta/tests/3-codegen/autogen/: .gitignore
compiler/test/4-opt-phase1/submits/ta/tests/4-opt/: .gitignore  CMakeLists.txt  eval_lab4.cpp
compiler/test/4-opt-phase1/submits/ta/tests/4-opt/testcases/: 0_lab2_lv0_1.cminus  0_lab2_lv0_1.out  2_lab2_lv1.cminus  2_lab2_lv2.out  3_complex1.cminus  3_complex1.out  4_complex2.cminus  6_complex4.out  8_licm0.out  9_licm_bad.cminus
examples/: example4loge.py  (+1 more)
(+111 files in other folders)
